[workspace]
resolver = "2"
members = [
    "nex", 
    "nex-core", 
    "nex-datalink", 
    "nex-packet", 
    "nex-socket", 
    "nex-sys"
]

[workspace.package]
version = "0.22.0"
edition = "2021"
authors = ["shellrow <shellrow@foctal.com>"]

[workspace.dependencies]
nex-core = { version = "0.22.0", path = "nex-core" }
nex-datalink = { version = "0.22.0", path = "nex-datalink" }
nex-packet = { version = "0.22.0", path = "nex-packet" }
nex-sys = { version = "0.22.0", path = "nex-sys" }
nex-socket = { version = "0.22.0", path = "nex-socket" }
serde = { version = "1" }
libc = "0.2"
netdev = { version = "0.36" }
bytes = "1"
tokio = { version = "1" }
rand = "0.8"
