[package]
name = "nex-core"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Core networking library for nex."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
netdev = { version = "0.28" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "netdev/serde"]
