[package]
name = "nex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core networking library for nex."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
netdev = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "netdev/serde"]
