[package]
name = "nex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core networking library for nex."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
netdev = { workspace = true }
mac-addr = { workspace = true }
ipnet = { workspace = true }
libc = { workspace = true }
nex-sys = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["gateway"]
gateway = ["netdev/gateway"]
serde = ["dep:serde", "mac-addr/serde", "ipnet/serde", "netdev/serde"]
