[package]
name = "nex-datalink"
version = "0.7.0"
edition = "2021"
authors = ["shellrow <shellrow@foctet.com>"]
description = "Provides cross-platform datalink layer networking. Part of nex project."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
pcap = { version = "1.1.0", optional = true }
nex-core = { path = "../nex-core", version = "0.7.0" }
nex-sys = { path = "../nex-sys", version = "0.7.0" }
netdev = { version = "0.25", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]

[features]
default = ["dep:netdev"]
serde = ["dep:serde", "netdev/serde"]
pcap = ["dep:pcap"]
