[package]
name = "nex-macro-helper"
version = "0.9.0"
edition = "2021"
authors = ["shellrow <shellrow@foctet.com>"]
description = "A helper crate for nex-macro. Not intended for direct use."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
nex-core = { path = "../nex-core", version = "0.9.0" }
