[package]
name = "nex-macro-helper"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A helper crate for nex-macro. Not intended for direct use."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
nex-core = { workspace = true }
