[package]
name = "nex-macro"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "A macro for generating packet structures used by nex-packet. Not intended for direct use."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
regex = "1.10"

[dev-dependencies]
nex-macro-helper = { path = "../nex-macro-helper" }
