[package]
name = "nex-packet-builder"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Provides high-level packet building on top of nex-packet. Part of nex project. "
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
nex-core = { path = "../nex-core" }
nex-packet = { path = "../nex-packet" }
rand = "0.8"
