[package]
name = "nex-packet"
version.workspace = true
edition = "2021"
authors.workspace = true
description = "Cross-platform packet parsing and building library. Provides low-level packet handling. Part of nex project."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
nex-core = { path = "../nex-core" }
nex-macro = { path = "../nex-macro" }
nex-macro-helper = { path = "../nex-macro-helper" }

[features]
serde = ["dep:serde", "nex-core/serde"]
