[package]
name = "nex-packet"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cross-platform packet parsing and building library. Provides low-level packet handling. Part of nex project."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
bytes = { workspace = true }
nex-core = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true }

[features]
serde = ["dep:serde", "nex-core/serde"]
