[package]
name = "nex-socket"
version = "0.9.0"
edition = "2021"
authors = ["shellrow <shellrow@foctet.com>"]
description = "Cross-platform socket library. Part of nex project. Offers socket-related functionality."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
async-io = "2.3"
futures-lite = "2.3"
futures-io = "0.3"
socket2 = { version = "0.5", features = ["all"] }
nex-packet = { path = "../nex-packet", version = "0.9.0" }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pki-types = { version = "1.7", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]

[features]
tls = ["dep:rustls", "dep:rustls-native-certs", "dep:rustls-pki-types"]
