[package]
name = "nex-socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cross-platform socket library. Part of nex project. Offers socket-related functionality."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
async-io = { workspace = true }
futures-lite = "2.6"
futures-io = "0.3"
socket2 = { version = "0.5", features = ["all"] }
nex-packet = { path = "../nex-packet", version = "0.18.0" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
