[package]
name = "nex-socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cross-platform socket library. Part of nex project. Offers socket-related functionality."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
nex-core = { workspace = true }
nex-packet = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["time", "sync", "net", "rt"] }
libc = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["poll", "net", "uio"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
