[package]
name = "nex-sys"
version = "0.12.0"
edition = "2021"
authors = ["shellrow <shellrow@fortnium.com>"]
description = "Provides network-related system function and call support for nex. Used for low-level system interactions."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
