[package]
name = "nex-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Provides network-related system function and call support for nex. Used for low-level system interactions."
repository = "https://github.com/shellrow/nex"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
