[package]
name = "xenet-cap"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Provide high-level API for packet capture. Part of xenet project."
repository = "https://github.com/shellrow/xenet"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
chrono = "0.4"
xenet-datalink = { path = "../xenet-datalink", version = "0.1.0" }
xenet-packet = { path = "../xenet-packet", version = "0.1.0" }
