[package]
name = "xenet-datalink"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Provides cross-platform datalink layer networking. Part of xenet project."
repository = "https://github.com/shellrow/xenet"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }
netmap_sys = { version = "0.1.4", optional = true, features = ["netmap_with_libs"] }
pcap = { version = "1.1.0", optional = true }
xenet-core = { path = "../xenet-core", version = "0.1.0" }
xenet-sys = { path = "../xenet-sys", version = "0.1.0" }
default-net = { version = "0.21.0", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]

[features]
default = ["dep:default-net"]
serde = ["dep:serde", "default-net/serde"]
