[package]
name = "xenet-macro-helper"
version = "0.5.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "A helper crate for xenet-macro. Not intended for direct use."
repository = "https://github.com/shellrow/xenet"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
xenet-core = { path = "../xenet-core", version = "0.5.0" }
