[package]
name = "xenet-packet-builder"
version = "0.3.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Provides high-level packet building on top of xenet-packet. Part of xenet project. "
repository = "https://github.com/shellrow/xenet"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
xenet-core = { path = "../xenet-core", version = "0.3.0" }
xenet-packet = { path = "../xenet-packet", version = "0.3.0" }
rand = "0.8"
