[package]
name = "xenet-packet"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Cross-platform packet parsing and building library. Provides low-level packet handling. Part of xenet project."
repository = "https://github.com/shellrow/xenet"
readme = "../README.md"
keywords = ["network", "packet"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
xenet-core = { path = "../xenet-core", version = "0.1.0" }
xenet-macro = { path = "../xenet-macro", version = "0.1.0" }
xenet-macro-helper = { path = "../xenet-macro-helper", version = "0.1.0" }
