[package]
name = "xenet-socket"
version = "0.1.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Cross-platform socket library. Part of xenet project. Offers socket-related functionality."
repository = "https://github.com/shellrow/xenet"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
socket2 = { version = "0.5", features = ["all"] }
async-io = "1.13"
xenet-packet = { path = "../xenet-packet", version = "0.1.0" }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
