[package]
name = "xenet-sys"
version = "0.5.0"
edition = "2021"
authors = ["shellrow <shellrow@protonmail.com>"]
description = "Provides network-related system function and call support for xenet. Used for low-level system interactions."
repository = "https://github.com/shellrow/xenet"
readme = "../README.md"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
]
